--- a/Projects/Hybrid4x4/SimulationFiles/MMI4x4_EME.ipynb
+++ b/Projects/Hybrid4x4/SimulationFiles/MMI4x4_EME.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,19 +19,19 @@
     "###############################################################\n",
     "# LINUX PATH\n",
     "\n",
-    "sys.path.append(\"/opt/lumerical/v221/api/python\") #Default linux lumapi path\n",
-    "import lumapi\n",
-    "sys.path.append(os.path.dirname('/home/fotonica04/Documentos/GitHub/Photonics-training/Projects/Hybrid4x4/SimulationFiles')) #Current directory\n",
+    "# sys.path.append(\"/opt/lumerical/v221/api/python\") #Default linux lumapi path\n",
+    "# import lumapi\n",
+    "# sys.path.append(os.path.dirname('/home/fotonica04/Documentos/GitHub/Photonics-training/Projects/Hybrid4x4/SimulationFiles')) #Current directory\n",
     "\n",
     "\n",
     "###############################################################\n",
     "# WINDOWS PATH\n",
     "\n",
-    "# spec_win = importlib.util.spec_from_file_location('lumapi', 'C:\\\\Program Files\\\\Lumerical\\\\v202\\\\api\\\\python\\\\lumapi.py')\n",
-    "# lumapi = importlib.util.module_from_spec(spec_win)\n",
-    "# os.add_dll_directory(\"C:/Program Files/Lumerical/v202/api/python\")\n",
-    "# sys.path.append(os.path.dirname('C:/Users/Caio/Documents/GitHub/Photonics-training/Projects/Hybrid4x4/SimulationFiles/'))\n",
-    "# spec_win.loader.exec_module(lumapi)"
+    "spec_win = importlib.util.spec_from_file_location('lumapi', 'C:\\\\Program Files\\\\Lumerical\\\\v202\\\\api\\\\python\\\\lumapi.py')\n",
+    "lumapi = importlib.util.module_from_spec(spec_win)\n",
+    "os.add_dll_directory(\"C:/Program Files/Lumerical/v202/api/python\")\n",
+    "sys.path.append(os.path.dirname('C:/Users/Caio/Documents/GitHub/Photonics-training/Projects/Hybrid4x4/SimulationFiles/'))\n",
+    "spec_win.loader.exec_module(lumapi)"
    ]
   },
   {
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mmi = lumapi.MODE(filename='MMI4x4EME3.lms')"
+    "mmi = lumapi.MODE(filename='MMI4x4EME.lms')"
    ]
   },
   {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,14 @@
     "# Monitor setting -----------------------------------------\n",
     "mmi.addemeprofile()\n",
     "mmi.set({\"x\":BdX_Span/2, \"x span\":BdX_Span+2*TLen+4e-6, \"y span\":1.15*BdY_Span})\n",
-    "mmi.set('x resolution',300)"
+    "mmi.set('x resolution',300)\n",
+    "\n",
+    "\n",
+    "# Delete ports --------------------------------------------\n",
+    "mmi.select(\"EME::Ports::port_3\")\n",
+    "mmi.delete()\n",
+    "mmi.select(\"EME::Ports::port_2\")\n",
+    "mmi.delete()"
    ]
   },
   {
@@ -1474,6 +1481,107 @@
     "ax[1][1].legend(fontsize=11)\n",
     "ax[1][1].grid()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mode convergence on Tappers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 6, 7, 8, 9]\n",
+      "[10, 12, 14, 16]\n",
+      "Calculating: 1/10\n"
+     ]
+    },
+    {
+     "ename": "LumApiError",
+     "evalue": "'emesweep cannot be used while in layout mode.'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mLumApiError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Caio\\Documents\\GitHub\\Photonics-training\\Projects\\Hybrid4x4\\SimulationFiles\\MMI4x4_EME.ipynb Cell 37\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Caio/Documents/GitHub/Photonics-training/Projects/Hybrid4x4/SimulationFiles/MMI4x4_EME.ipynb#X51sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m mmi\u001b[39m.\u001b[39msetemeanalysis(\u001b[39m'\u001b[39m\u001b[39mstop wavelength\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m1565e-9\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Caio/Documents/GitHub/Photonics-training/Projects/Hybrid4x4/SimulationFiles/MMI4x4_EME.ipynb#X51sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m mmi\u001b[39m.\u001b[39msetemeanalysis(\u001b[39m'\u001b[39m\u001b[39mnumber of wavelength points\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m150\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Caio/Documents/GitHub/Photonics-training/Projects/Hybrid4x4/SimulationFiles/MMI4x4_EME.ipynb#X51sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m mmi\u001b[39m.\u001b[39;49memesweep(\u001b[39m'\u001b[39;49m\u001b[39mwavelength sweep\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Caio/Documents/GitHub/Photonics-training/Projects/Hybrid4x4/SimulationFiles/MMI4x4_EME.ipynb#X51sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m S\u001b[39m=\u001b[39m mmi\u001b[39m.\u001b[39mgetemesweep(\u001b[39m'\u001b[39m\u001b[39mS_wavelength_sweep\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Caio/Documents/GitHub/Photonics-training/Projects/Hybrid4x4/SimulationFiles/MMI4x4_EME.ipynb#X51sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m S81Matrix[i,:] \u001b[39m=\u001b[39m \u001b[39m10\u001b[39m\u001b[39m*\u001b[39mnp\u001b[39m.\u001b[39mlog10(np\u001b[39m.\u001b[39mabs(S[\u001b[39m'\u001b[39m\u001b[39ms41\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m*\u001b[39m\u001b[39m*\u001b[39m\u001b[39m2\u001b[39m))\n",
+      "File \u001b[1;32mC:\\Program Files\\Lumerical\\v202\\api\\python\\lumapi.py:1138\u001b[0m, in \u001b[0;36mLumerical.__init__.<locals>.<lambda>\u001b[1;34m(self, *args)\u001b[0m\n\u001b[0;32m   1135\u001b[0m     method \u001b[39m=\u001b[39m (\u001b[39mlambda\u001b[39;00m x: \u001b[39mlambda\u001b[39;00m \u001b[39mself\u001b[39m, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs:\n\u001b[0;32m   1136\u001b[0m     appCallWithConstructor(\u001b[39mself\u001b[39m, x, args, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs))(name)\n\u001b[0;32m   1137\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m-> 1138\u001b[0m     method \u001b[39m=\u001b[39m (\u001b[39mlambda\u001b[39;00m x: \u001b[39mlambda\u001b[39;00m \u001b[39mself\u001b[39m, \u001b[39m*\u001b[39margs: appCall(\u001b[39mself\u001b[39;49m, x, args))(name)\n\u001b[0;32m   1139\u001b[0m method\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m \u001b[39m=\u001b[39m \u001b[39mstr\u001b[39m(name)\n\u001b[0;32m   1140\u001b[0m \u001b[39mtry\u001b[39;00m:\n",
+      "File \u001b[1;32mC:\\Program Files\\Lumerical\\v202\\api\\python\\lumapi.py:801\u001b[0m, in \u001b[0;36mappCall\u001b[1;34m(self, name, *args)\u001b[0m\n\u001b[0;32m    799\u001b[0m         argLumTypes \u001b[39m=\u001b[39m lumTypes(\u001b[39mlist\u001b[39m(args[\u001b[39m0\u001b[39m]))\n\u001b[0;32m    800\u001b[0m         message \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m (\u001b[39m\"\u001b[39m\u001b[39m - \u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m name \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m arguments were converted to (\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m, \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(argLumTypes) \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m--> 801\u001b[0m     \u001b[39mraise\u001b[39;00m LumApiError(message)\n\u001b[0;32m    802\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(rvals[\u001b[39m0\u001b[39m], \u001b[39mstr\u001b[39m) \u001b[39mand\u001b[39;00m (rvals[\u001b[39m0\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39md6d8d1b2c083c251\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[0;32m    803\u001b[0m     rvals[\u001b[39m0\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n",
+      "\u001b[1;31mLumApiError\u001b[0m: 'emesweep cannot be used while in layout mode.'"
+     ]
+    }
+   ],
+   "source": [
+    "modeArray = [4,5,6,7,8,9,10,12,14,16]\n",
+    "# modeArray = np.linspace(4,5,2)\n",
+    "print(modeArray[0:6])\n",
+    "print(modeArray[6:])\n",
+    "\n",
+    "S81Matrix = np.zeros((len(modeArray),150),dtype=complex)\n",
+    "S82Matrix = np.zeros((len(modeArray),150),dtype=complex)\n",
+    "\n",
+    "for i in range(len(modeArray)):\n",
+    "    print(\"Calculating: \" + str(i+1) + \"/\" + str(len(modeArray)))\n",
+    "\n",
+    "    mmi.switchtolayout()\n",
+    "    mmi.select(\"EME\")\n",
+    "    mmi.set({\"modes\":np.transpose([4, modeArray[i], 20, modeArray[i], 4])})\n",
+    "    mmi.run()\n",
+    "\n",
+    "    mmi.setemeanalysis('wavelength sweep',1)\n",
+    "    mmi.setemeanalysis('start wavelength',1530e-9)\n",
+    "    mmi.setemeanalysis('stop wavelength',1565e-9)\n",
+    "    mmi.setemeanalysis('number of wavelength points',150)\n",
+    "    mmi.emesweep('wavelength sweep')\n",
+    "\n",
+    "    S= mmi.getemesweep('S_wavelength_sweep')\n",
+    "\n",
+    "    S81Matrix[i,:] = 10*np.log10(np.abs(S['s41']**2))\n",
+    "    S82Matrix[i,:] = 10*np.log10(np.abs(S['s42']**2))\n",
+    "\n",
+    "Swav = S['wavelength']\n",
+    "\n",
+    "fig, ax = plt.subplots(2,2,figsize=(20,7))\n",
+    "\n",
+    "for i in range(len(modeArray[0:6])):\n",
+    "    ax[0][0].plot(Swav*1e9,S81Matrix[i,:],linewidth = 2,label = 'Modes = ' + str(modeArray[i]))\n",
+    "    ax[0][1].plot(Swav*1e9,S82Matrix[i,:],linewidth = 2,label = 'Modes = ' + str(modeArray[i]))\n",
+    "\n",
+    "for i in range(len(modeArray[6:])):\n",
+    "    ax[1][0].plot(Swav*1e9,S81Matrix[i,:],linewidth = 2,label = 'Modes = ' + str(modeArray[i+6]))\n",
+    "    ax[1][1].plot(Swav*1e9,S82Matrix[i,:],linewidth = 2,label = 'Modes = ' + str(modeArray[i+6]))\n",
+    "\n",
+    "ax[0][0].set_xlabel(r'$\\lambda$ (nm)',fontsize =15)\n",
+    "ax[0][0].set_ylabel(r'Gain (dB)',fontsize =15)\n",
+    "ax[0][0].set_title('Ganho P8, Porta 1',fontsize =20)\n",
+    "ax[0][0].legend(fontsize = 11)\n",
+    "ax[0][0].grid()\n",
+    "\n",
+    "ax[0][1].set_xlabel(r'$\\lambda$ (nm)',fontsize =15)\n",
+    "ax[0][1].set_ylabel(r'Gain (dB)',fontsize =15)\n",
+    "ax[0][1].set_title('Ganho P8, Porta 2',fontsize =20)\n",
+    "ax[0][1].legend(fontsize = 11)\n",
+    "ax[0][1].grid()\n",
+    "\n",
+    "ax[1][0].set_xlabel(r'$\\lambda$ (nm)',fontsize =15)\n",
+    "ax[1][0].set_ylabel(r'Gain (dB)',fontsize =15)\n",
+    "ax[1][0].set_title('Ganho P8, Porta 1',fontsize =20)\n",
+    "ax[1][0].legend(fontsize = 11)\n",
+    "ax[1][0].grid()\n",
+    "\n",
+    "ax[1][1].set_xlabel(r'$\\lambda$ (nm)',fontsize =15)\n",
+    "ax[1][1].set_ylabel(r'Gain (dB)',fontsize =15)\n",
+    "ax[1][1].set_title('Ganho P8, Porta 2',fontsize =20)\n",
+    "ax[1][1].legend(fontsize = 11)\n",
+    "ax[1][1].grid()"
+   ]
   }
  ],
  "metadata": {
@@ -1492,7 +1600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4,
   "vscode": {
