--- a/Projects/Hybrid4x4/SimulationFiles/MMI4x4_EME.ipynb
+++ b/Projects/Hybrid4x4/SimulationFiles/MMI4x4_EME.ipynb
@@ -1586,7 +1586,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1605,7 +1605,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "01b4b674cd42658a898577618beaa1a387393d7f026f84723d5d405e574265f4"
+    "hash": "9cbdc75d9e2f55d2d9002e3a3bcb34fdd032c5e2f75dfba8f134282fc3e89518"
    }
   }
  },
