--- a/Projects/Hybrid4x4/SimulationFiles/MMI4x4_EME.ipynb
+++ b/Projects/Hybrid4x4/SimulationFiles/MMI4x4_EME.ipynb
@@ -19,19 +19,19 @@
     "###############################################################\n",
     "# LINUX PATH\n",
     "\n",
-    "# sys.path.append(\"/opt/lumerical/v221/api/python\") #Default linux lumapi path\n",
-    "# import lumapi\n",
-    "# sys.path.append(os.path.dirname('/home/fotonica04/Documentos/GitHub/Photonics-training/Projects/Hybrid4x4/SimulationFiles')) #Current directory\n",
+    "sys.path.append(\"/opt/lumerical/v221/api/python\") #Default linux lumapi path\n",
+    "import lumapi\n",
+    "sys.path.append(os.path.dirname('/home/fotonica04/Documentos/GitHub/Photonics-training/Projects/Hybrid4x4/SimulationFiles')) #Current directory\n",
     "\n",
     "\n",
     "###############################################################\n",
     "# WINDOWS PATH\n",
     "\n",
-    "spec_win = importlib.util.spec_from_file_location('lumapi', 'C:\\\\Program Files\\\\Lumerical\\\\v202\\\\api\\\\python\\\\lumapi.py')\n",
-    "lumapi = importlib.util.module_from_spec(spec_win)\n",
-    "os.add_dll_directory(\"C:/Program Files/Lumerical/v202/api/python\")\n",
-    "sys.path.append(os.path.dirname('C:/Users/Caio/Documents/GitHub/Photonics-training/Projects/Hybrid4x4/SimulationFiles/'))\n",
-    "spec_win.loader.exec_module(lumapi)"
+    "# spec_win = importlib.util.spec_from_file_location('lumapi', 'C:\\\\Program Files\\\\Lumerical\\\\v202\\\\api\\\\python\\\\lumapi.py')\n",
+    "# lumapi = importlib.util.module_from_spec(spec_win)\n",
+    "# os.add_dll_directory(\"C:/Program Files/Lumerical/v202/api/python\")\n",
+    "# sys.path.append(os.path.dirname('C:/Users/Caio/Documents/GitHub/Photonics-training/Projects/Hybrid4x4/SimulationFiles/'))\n",
+    "# spec_win.loader.exec_module(lumapi)"
    ]
   },
   {
@@ -1600,7 +1600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
