--- a/Projects/Hybrid4x4/SimulationFiles/MMI4x4_EME.ipynb
+++ b/Projects/Hybrid4x4/SimulationFiles/MMI4x4_EME.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,9 +43,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "LumApiError",
+     "evalue": "'appOpen error: \\n Failed to start messaging, check licenses...Insufficient Ansys Lumerical Prep/post processing for MODE solvers licenses available.\\nLicensed number of users already reached.\\nFeature:       lum_mode_gui\\nLicense path:  1055@10.75.13.24:\\nFlexNet Licensing error:-4,132.  System Error: 2 \"No such file or directory\"\\n'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mLumApiError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/home/fotonica04/Documentos/GitHub/Photonics-training/Projects/Hybrid4x4/SimulationFiles/MMI4x4_EME.ipynb Célula 3\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/fotonica04/Documentos/GitHub/Photonics-training/Projects/Hybrid4x4/SimulationFiles/MMI4x4_EME.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m mmi \u001b[39m=\u001b[39m lumapi\u001b[39m.\u001b[39;49mMODE(filename\u001b[39m=\u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39mMMI4x4EME.lms\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "File \u001b[0;32m/opt/lumerical/v221/api/python/lumapi.py:1376\u001b[0m, in \u001b[0;36mMODE.__init__\u001b[0;34m(self, filename, key, hide, serverArgs, **kwargs)\u001b[0m\n\u001b[1;32m   1375\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, filename\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, key\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, hide\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, serverArgs\u001b[39m=\u001b[39m{}, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m-> 1376\u001b[0m     \u001b[39msuper\u001b[39;49m(MODE, \u001b[39mself\u001b[39;49m)\u001b[39m.\u001b[39;49m\u001b[39m__init__\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39mmode\u001b[39;49m\u001b[39m'\u001b[39;49m, filename, key, hide, serverArgs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "File \u001b[0;32m/opt/lumerical/v221/api/python/lumapi.py:1093\u001b[0m, in \u001b[0;36mLumerical.__init__\u001b[0;34m(self, product, filename, key, hide, serverArgs, **kwargs)\u001b[0m\n\u001b[1;32m   1082\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, product, filename, key, hide, serverArgs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m   1083\u001b[0m     \u001b[39m\"\"\"Keyword Arguments:\u001b[39;00m\n\u001b[1;32m   1084\u001b[0m \u001b[39m            script: A single string containing a script filename, or a collection of strings\u001b[39;00m\n\u001b[1;32m   1085\u001b[0m \u001b[39m                    that are filenames. Preffered types are list and tuple, dicts are not\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1091\u001b[0m \u001b[39m                     opened before any scripts specified by the script keyword are run.\u001b[39;00m\n\u001b[1;32m   1092\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 1093\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandle \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(product, key, hide, serverArgs)\n\u001b[1;32m   1094\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandle\u001b[39m.\u001b[39m\u001b[39m__doc__\u001b[39m \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mhandle to the session\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1096\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msyncUserFunctionsFlag \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n",
+      "File \u001b[0;32m/opt/lumerical/v221/api/python/lumapi.py:239\u001b[0m, in \u001b[0;36mopen\u001b[0;34m(product, key, hide, serverArgs)\u001b[0m\n\u001b[1;32m    237\u001b[0m         error \u001b[39m=\u001b[39m iapi\u001b[39m.\u001b[39mappGetLastError()\n\u001b[1;32m    238\u001b[0m         error \u001b[39m=\u001b[39m error\u001b[39m.\u001b[39mcontents\u001b[39m.\u001b[39mstr[:error\u001b[39m.\u001b[39mcontents\u001b[39m.\u001b[39mlen]\u001b[39m.\u001b[39mdecode(\u001b[39m'\u001b[39m\u001b[39mutf-8\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m--> 239\u001b[0m         \u001b[39mraise\u001b[39;00m LumApiError(error)\n\u001b[1;32m    241\u001b[0m \u001b[39mreturn\u001b[39;00m h\n",
+      "\u001b[0;31mLumApiError\u001b[0m: 'appOpen error: \\n Failed to start messaging, check licenses...Insufficient Ansys Lumerical Prep/post processing for MODE solvers licenses available.\\nLicensed number of users already reached.\\nFeature:       lum_mode_gui\\nLicense path:  1055@10.75.13.24:\\nFlexNet Licensing error:-4,132.  System Error: 2 \"No such file or directory\"\\n'"
+     ]
+    }
+   ],
    "source": [
     "mmi = lumapi.MODE(filename='MMI4x4EME.lms')"
    ]
